remove error thresh from api
